--- a/BroadcastFunApp/app/src/main/res/layout/activity_battery_percentage2.xml
+++ b/BroadcastFunApp/app/src/main/res/layout/activity_battery_percentage2.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".BatteryPercentageActivity2"
+    android:background="#293241"
     android:gravity="center">
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view_guess"
