--- a/BroadcastFunApp/app/src/main/res/layout/activity_main.xml
+++ b/BroadcastFunApp/app/src/main/res/layout/activity_main.xml
@@ -20,11 +20,13 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="50dp"
         android:layout_margin="8dp"
+        android:padding="10dp"
         app:cardBackgroundColor="#6C88C4">
     <Spinner
         android:id="@+id/spinner_items"
         android:layout_width="wrap_content"
         android:layout_height="45dp"
+        android:padding="12dp"
         android:layout_gravity="center"/>
     </androidx.cardview.widget.CardView>
     <Button
@@ -33,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="SELECT"
+        android:paddingHorizontal="29dp"
         android:onClick="getSelectedItem"/>
 
 </LinearLayout>
