--- a/BroadcastFunApp/app/src/main/res/layout/activity_wifi_state.xml
+++ b/BroadcastFunApp/app/src/main/res/layout/activity_wifi_state.xml
@@ -5,10 +5,59 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".WifiStateActivity"
-    android:gravity="center">
-    <TextView
+    android:gravity="center"
+    android:orientation="vertical"
+    android:background="#293241">
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="THIS IS 'WIFI-STATE' AVTIVITY"/>
+        app:cardBackgroundColor="#B0FBFC"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="10dp">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
+            <ImageView
+                android:id="@+id/image_view_state"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:padding="10dp"
+                tools:src="@drawable/ic_launcher_background" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardBackgroundColor="#FBD1A2">
+                <TextView
+                    android:id="@+id/text_view_connection_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:textColor="#1D4E89"
+                    android:textStyle="bold"
+                    android:text="Type :"/>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardBackgroundColor="#FBB7B3">
+                <TextView
+                    android:id="@+id/text_view_connection_status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:textColor="#3D5A80"
+                    android:textStyle="bold"
+                    android:text="Status :"/>
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+    <Button
+        android:id="@+id/button_get_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:paddingHorizontal="28dp"
+        android:text="GET STATUS"/>
 </LinearLayout>
